Fixing icon overlapping issue and fixing colors

--- a/Weather-app/CSS/style.css
+++ b/Weather-app/CSS/style.css
@@ -25,7 +25,7 @@ h1 {
 }
 
 hr {
-  margin: 20px 150px;
+  margin: 20px 0px;
 }
 
 a:link, .temp a:hover {
@@ -33,8 +33,12 @@ a:link, .temp a:hover {
   /*text-shadow: 0 1px 2px black;*/
 }
 
+.row {
+  text-align: center;
+}
+
 i {
-  font-size: 18vw;
+  font-size: 16vw;
   display: block;
   text-align: center;
   text-shadow: 0 2px 10px white;
@@ -57,7 +61,7 @@ i.wi-rain {
 }
 
 #c-icon {
-  margin: 60px 0;
+  margin: 50px 0;
   text-shadow: 0 0 15px grey;
 }
 
